--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^15.0.3",
-    "@react-native-async-storage/async-storage": "2.2.0",
+    "@react-native-async-storage/async-storage": "^1.24.0",
     "@types/react": "~19.1.10",
     "eslint-config-expo": "~10.0.0",
     "expo": "^54.0.29",
