fix: Add expo-game-center plugin and improve authentication logging

--- a/app.json
+++ b/app.json
@@ -41,6 +41,7 @@
     "plugins": [
       "expo-secure-store",
       "expo-font",
+      "expo-game-center",
       [
         "expo-build-properties",
         {
