--- a/.github/workflows/react-native-cicd.yml
+++ b/.github/workflows/react-native-cicd.yml
@@ -104,6 +104,19 @@ jobs:
         env:
           EXPO_TOKEN: ${{ secrets.EXPO_TOKEN }}
       
+      - name: Debug Project Configuration
+        run: |
+            echo "=== App.json content ==="
+            cat app.json
+            echo ""
+            echo "=== Project ID ==="
+            grep -A 2 "projectId" app.json || echo "No projectId found"
+            echo ""
+            echo "=== Checking if project exists on EAS ==="
+            eas project:info || echo "Project not found or error accessing project"
+        env:
+            EXPO_TOKEN: ${{ secrets.EXPO_TOKEN }}
+
       - name: 📋 Fix package.json main entry
         run: |
           # Check if jq is installed, if not install it
