--- a/.github/workflows/react-native-cicd.yml
+++ b/.github/workflows/react-native-cicd.yml
@@ -64,9 +64,14 @@ jobs:
 
       - name: 🔧 Configure Code Signing
         run: |
-        # Set provisioning profile ONLY for LetterLoom target
-        sed -i '' "s/PROVISIONING_PROFILE_SPECIFIER = ""/PROVISIONING_PROFILE_SPECIFIER = "0891c2ca-63f5-4a05-831e-be27bc4d3d7d"/' ios/LetterLoom.xcodeproj/project.pbxproj
-
+          # Create xcconfig file for code signing
+          cat > /tmp/codesigning.xcconfig << EOF
+          CODE_SIGN_STYLE = Manual
+          DEVELOPMENT_TEAM = ${{ secrets.EXPO_TEAM_ID }}
+          CODE_SIGN_IDENTITY = iPhone Distribution
+          PROVISIONING_PROFILE_SPECIFIER = 0891c2ca-63f5-4a05-831e-be27bc4d3d7d
+          EOF
+    
       - name: 🔨 Build iOS App
         run: |
           xcodebuild -workspace ios/LetterLoom.xcworkspace \
@@ -74,10 +79,8 @@ jobs:
             -configuration Release \
             -destination generic/platform=iOS \
             -archivePath build/LetterLoom.xcarchive \
+            -xcconfig /tmp/codesigning.xcconfig \ 
             archive \
-            CODE_SIGN_STYLE=Manual \
-            DEVELOPMENT_TEAM="${{ secrets.EXPO_TEAM_ID }}" \
-            CODE_SIGN_IDENTITY="iPhone Distribution" \
             ONLY_ACTIVE_ARCH=NO
 
       - name: 📦 Export IPA
