--- a/.github/workflows/react-native-cicd.yml
+++ b/.github/workflows/react-native-cicd.yml
@@ -62,16 +62,31 @@ jobs:
       - name: 🏗 Run Expo Prebuild
         run: npx expo prebuild --platform ios --clean
 
-      - name: 🔧 Configure Code Signing
+      - name: 🔧 Install xcodeproj gem
+        run: gem install xcodeproj
+
+      - name: 🔧 Configure Code Signing for LetterLoom Target Only
         run: |
-          # Create xcconfig file for code signing
-          cat > /tmp/codesigning.xcconfig << EOF
-          CODE_SIGN_STYLE = Manual
-          DEVELOPMENT_TEAM = ${{ secrets.EXPO_TEAM_ID }}
-          CODE_SIGN_IDENTITY = iPhone Distribution
-          PROVISIONING_PROFILE_SPECIFIER = 0891c2ca-63f5-4a05-831e-be27bc4d3d7d
-          EOF
+          ruby -r xcodeproj - <<'RUBY'
+          project_path = 'ios/LetterLoom.xcodeproj'
+          project = Xcodeproj::Project.open(project_path)
     
+          project.targets.each do |target|
+            if target.name == 'LetterLoom'
+              target.build_configurations.each do |config|
+                if config.name == 'Release'
+                  config.build_settings['PROVISIONING_PROFILE_SPECIFIER'] = '0891c2ca-63f5-4a05-831e-be27bc4d3d7d'
+                  config.build_settings['CODE_SIGN_STYLE'] = 'Manual'
+                  config.build_settings['DEVELOPMENT_TEAM'] = '6XBQPB83GR'
+                  config.build_settings['CODE_SIGN_IDENTITY'] = 'iPhone Distribution'
+                end
+              end
+            end
+          end
+    
+          project.save
+          RUBY
+  
       - name: 🔨 Build iOS App
         run: |
           xcodebuild -workspace ios/LetterLoom.xcworkspace \
@@ -79,7 +94,6 @@ jobs:
             -configuration Release \
             -destination generic/platform=iOS \
             -archivePath build/LetterLoom.xcarchive \
-            -xcconfig /tmp/codesigning.xcconfig \
             archive \
             ONLY_ACTIVE_ARCH=NO
 
