--- a/.github/workflows/react-native-cicd.yml
+++ b/.github/workflows/react-native-cicd.yml
@@ -110,6 +110,11 @@ jobs:
               <string>${{ secrets.EXPO_TEAM_ID }}</string>
               <key>signingStyle</key>
               <string>manual</string>
+              <key>provisioningProfiles</key>
+              <dict>
+                  <key>com.letterloom.app</key>
+                  <string>0891c2ca-63f5-4a05-831e-be27bc4d3d7d</string>
+              </dict>
           </dict>
           </plist>
           EOF
