add a github actions test 2

--- a/.github/workflows/test-appstore-api.yml
+++ b/.github/workflows/test-appstore-api.yml
@@ -78,4 +78,4 @@
       ' 2>/dev/null || echo "2")
     fi
     
-    echo "Latest build number determined: $LATEST_BUILD"
+    echo "Latest build number determined: $LATEST_BUILD
