--- a/.github/workflows/test-appstore-api.yml
+++ b/.github/workflows/test-appstore-api.yml
@@ -20,63 +20,52 @@ jobs:
         run: |
           brew install jq 2>/dev/null || true
           
-          # Install PyJWT for proper JWT generation
           pip3 install PyJWT cryptography
           
           echo "Using App Store Connect API to get build number..."
           
-          # Create Python script to generate JWT
-          cat > generate_jwt.py << 'PYTHON_SCRIPT'
-import jwt
-import time
-import sys
-
-api_key_id = sys.argv[1]
-issuer_id = sys.argv[2]
-key_file = sys.argv[3]
-
-# Read private key
-with open(key_file, 'r') as f:
-    private_key = f.read()
-
-# Create JWT
-issued_at = int(time.time())
-expiration = issued_at + 1200
-
-headers = {
-    "alg": "ES256",
-    "kid": api_key_id,
-    "typ": "JWT"
-}
-
-payload = {
-    "iss": issuer_id,
-    "iat": issued_at,
-    "exp": expiration,
-    "aud": "appstoreconnect-v1"
-}
-
-token = jwt.encode(payload, private_key, algorithm="ES256", headers=headers)
-print(token)
-PYTHON_SCRIPT
+          cat > generate_jwt.py << 'EOF'
+          import jwt
+          import time
+          import sys
           
-          # Generate JWT using Python
-          JWT=$(python3 generate_jwt.py \
-            "${{ secrets.APP_STORE_CONNECT_API_KEY_ID }}" \
-            "${{ secrets.APP_STORE_CONNECT_ISSUER_ID }}" \
-            ~/.appstoreconnect/private_keys/AuthKey_${{ secrets.APP_STORE_CONNECT_API_KEY_ID }}.p8)
+          api_key_id = sys.argv[1]
+          issuer_id = sys.argv[2]
+          key_file = sys.argv[3]
+          
+          with open(key_file, 'r') as f:
+              private_key = f.read()
+          
+          issued_at = int(time.time())
+          expiration = issued_at + 1200
+          
+          headers = {
+              "alg": "ES256",
+              "kid": api_key_id,
+              "typ": "JWT"
+          }
+          
+          payload = {
+              "iss": issuer_id,
+              "iat": issued_at,
+              "exp": expiration,
+              "aud": "appstoreconnect-v1"
+          }
+          
+          token = jwt.encode(payload, private_key, algorithm="ES256", headers=headers)
+          print(token)
+          EOF
+          
+          JWT=$(python3 generate_jwt.py "${{ secrets.APP_STORE_CONNECT_API_KEY_ID }}" "${{ secrets.APP_STORE_CONNECT_ISSUER_ID }}" ~/.appstoreconnect/private_keys/AuthKey_${{ secrets.APP_STORE_CONNECT_API_KEY_ID }}.p8)
           
           echo "JWT token generated"
           
-          # Get app ID
           echo "Fetching app information..."
-          APP_RESPONSE=$(curl -s --globoff -H "Authorization: Bearer $JWT" \
-            "https://api.appstoreconnect.apple.com/v1/apps?filter[bundleId]=com.letterloom.app")
+          APP_RESPONSE=$(curl -s --globoff -H "Authorization: Bearer $JWT" "https://api.appstoreconnect.apple.com/v1/apps?filter[bundleId]=com.letterloom.app")
           
           echo "App API Response:"
           echo "$APP_RESPONSE" | jq '.'
           
-          # Check for errors
           if echo "$APP_RESPONSE" | jq -e '.errors' > /dev/null 2>&1; then
             echo "Error from API:"
             echo "$APP_RESPONSE" | jq '.errors'
@@ -91,22 +80,18 @@ PYTHON_SCRIPT
             exit 1
           fi
           
-          # Get builds for this app
           echo "Fetching builds for app..."
-          BUILDS_RESPONSE=$(curl -s --globoff -H "Authorization: Bearer $JWT" \
-            "https://api.appstoreconnect.apple.com/v1/builds?filter[app]=$APP_ID&sort=-version&limit=5")
+          BUILDS_RESPONSE=$(curl -s --globoff -H "Authorization: Bearer $JWT" "https://api.appstoreconnect.apple.com/v1/builds?filter[app]=$APP_ID&sort=-version&limit=5")
           
           echo "Builds API Response:"
           echo "$BUILDS_RESPONSE" | jq '.'
           
-          # Check for errors
           if echo "$BUILDS_RESPONSE" | jq -e '.errors' > /dev/null 2>&1; then
             echo "Error from API:"
             echo "$BUILDS_RESPONSE" | jq '.errors'
             exit 1
           fi
           
-          # Extract latest build number
           LATEST_BUILD=$(echo "$BUILDS_RESPONSE" | jq -r '.data[0].attributes.version // "0"')
           
           echo "Latest build number: $LATEST_BUILD"
